Status Update
Comments
ch...@google.com <ch...@google.com>
li...@chromium.org <li...@chromium.org> #2
fantasai@ updated the specification and both values of text-edge are required [0]. so the single value of "cap" seems invalid, and chrome converts it into "auto"
[1] text-box: normal | <'text-box-trim'> || <'text-box-edge'>
[2] text-box-edge: auto | <text-edge>
[3] <text-edge> = [ text | ideographic | ideographic-ink ]
| [ text | ideographic | ideographic-ink | cap | ex ]
[ text | ideographic | ideographic-ink | alphabetic ]
[0]
[1]
[2]
[3]
br...@chromium.org <br...@chromium.org> #4
Thank you Koji and Lingqi for looking into this.
nt...@gmail.com <nt...@gmail.com> #5
nt...@gmail.com <nt...@gmail.com> #6
So I think there is still a bug to fix (albait not the originally described one).
li...@chromium.org <li...@chromium.org> #7
I meant to say that we intendedly take the initial value of text-box-edge, which is "auto", when parsing an invalid text-box-edge value.
The current behavior is working as intended (based on our current understanding of specification), but understandably that it might confuse someone. To discuss what the expected result should be, maybe it would be better to raise a specification issue.
ko...@chromium.org <ko...@chromium.org> #8
I believe the comment 2 means that
text-box: trim-start cap
is an invalid value, and should not compute totext-box: trim-start auto
.
Thanks, that's a good point. Making it invalid, and thus inherits from parent, produces the same result as "computes to auto
" for the test, so I think Blink is correct result-wise, but you're right that they are different. Let me check with the style expert.
ap...@google.com <ap...@google.com> #9
Project: chromium/src
Branch: main
Author: Koji Ishii <
Link:
[text-box-trim] Rewind the stream when ConsumeTextBoxEdge
fails
Expand for full commit details
[text-box-trim] Rewind the stream when `ConsumeTextBoxEdge` fails
This patch fixes `ConsumeTextBoxEdge` to rewind the input
stream if the parsing fails in the middle of the consumption.
Bug: 385160696
Change-Id: Ib8ffbf6ab9731dd4443536ef13abefe5c354b63c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6151521
Reviewed-by: Kent Tamura <tkent@chromium.org>
Auto-Submit: Koji Ishii <kojii@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1403286}
Files:
- M
third_party/blink/renderer/core/css/properties/css_parsing_utils.cc
- M
third_party/blink/web_tests/external/wpt/css/css-inline/text-box-trim/parsing/text-box-invalid.html
Hash: 02361637297a16b11441fd21ce07c128c62081b3
Date: Tue Jan 07 15:41:44 2025
Description
I saw this report from an author in WebKit’s standards-positions repo about this demo
(See attached screenshot for differences)
Tim from Apple chimed in with the following analysis: