[text-box-trim] Rewind the stream when `ConsumeTextBoxEdge` fails

This patch fixes `ConsumeTextBoxEdge` to rewind the input
stream if the parsing fails in the middle of the consumption.

Bug: 385160696
Change-Id: Ib8ffbf6ab9731dd4443536ef13abefe5c354b63c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6151521
Reviewed-by: Kent Tamura <tkent@chromium.org>
Auto-Submit: Koji Ishii <kojii@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1403286}